index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Inter';
  src: url('/fonts/inter/Inter-VariableFont_slnt,wght.ttf') format('truetype-variations');
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@layer utilities {
  .clip-path-slant {
    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
  }
}

